--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
 
     <string name="api_key">AIzaSyDacPwZkcBgfe3xjZsPeO3xKeRTI4alXZQ</string>
     <string name="profile">Profile</string>
+    <string name="edit_profile_info">Edit Profile Info</string>
 </resources>
